--- a/bvn-cuoikhoa/assets/css/styles.css
+++ b/bvn-cuoikhoa/assets/css/styles.css
@@ -19,7 +19,7 @@
   .header {
     width: 100%;
     height: 700px;
-    background-color: #f3f4f4;
+    background-color: whitesmoke;
   }
   .header hr {
     width: 880px;
@@ -50,7 +50,7 @@
   .header-top {
     /* width: 100%; */
     height: 50px;
-    background-color: #f3f4f4;
+    background-color: white;
     display: flex;
     justify-content: space-between;
     text-align: center;
@@ -112,7 +112,7 @@
   .header-content-left {
     /* width: 40%; */
     height: auto;
-    /* background-color: aqua; */
+    /* background-color: cyan; */
     margin-left: -20px;
   }
   .header-content-left h2 {
@@ -127,7 +127,7 @@
   .header-content-left button {
     width: 120px;
     height: 35px;
-    background-color: #000;
+    background-color: black;
     color: aliceblue;
     margin-top: 50px;
   }
@@ -142,7 +142,6 @@
   }
   .header-content-vector {
     height: auto;
-    /* background-color: red; */
     position: absolute;
     right: 0px;
     top: 280px;
@@ -151,24 +150,23 @@
     width: 150px;
   }
   .content {
-    /* background-color: red; */
+    
     width: 100%;
     height: 680px;
   }
   .list-card-1 {
     width: 100%;
     height: 650px;
-    /* background-color: yellow */
+    /* background-color: green */
   }
   
   .list-card-1 .bander {
     /* width: 100%; */
     display: flex;
-    /* width: 200px; */
     height: 70px;
     justify-content: center;
     align-items: center;
-    flex-shrink: 0;
+    flex-shrink: 0px;
     margin-top: 40px;
   }
   .list-card-1 .bander img {
@@ -180,7 +178,7 @@
   .list-card-1 .product {
     width: 100%;
     height: 520px;
-    /* background-color: #15d315; */
+    /* background-color: cyan; */
     display: flex;
     margin-left: 15px;
   }
@@ -191,19 +189,19 @@
     justify-content: center;
     align-items: center;
     transform: rotate(-90deg);
-    /* background-color: #15d315; */
+    /* background-color: cyan; */
     flex-shrink: 0;
     margin-left: -90px;
     margin-top: 230px;
   }
   .list-card-1 .product .text h2 {
-    color: var(--Dark, #000);
+    color: var(--Dark, black);
     text-align: center;
     font-feature-settings: "liga" off, "clig" off;
     font-family: Roboto;
     font-size: 22px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 400px;
     line-height: normal;
     text-transform: uppercase;
   }
@@ -235,24 +233,24 @@
   .newsletter {
     width: 100%;
     height: 2000px;
-    /* background-color: red; */
+    /* background-color: beige; */
   }
   .newsletter-text {
     width: 100%;
     height: 70px;
-    /* background-color: #15d315; */
+    /* background-color: cyan; */
     display: flex;
     justify-content: center;
     align-items: center;
   }
   .newsletter-text h2 {
-    color: var(--Dark, #000);
+    color: var(--Dark, black);
     text-align: center;
     font-feature-settings: "liga" off, "clig" off;
     font-family: Roboto;
     font-size: 38px;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 500px;
     line-height: normal;
     text-transform: capitalize;
   }
@@ -260,7 +258,7 @@
   .newsletter-menu {
     width: 100%;
     height: 50px;
-    /* background-color: #5115d3; */
+    /* background-color: cyan; */
     display: flex;
     justify-content: space-between;
   }
@@ -292,18 +290,18 @@
   .newsletter-menu .newsletter-menu-right button {
     width: 60px;
     height: 20px;
-    background-color: #000;
+    background-color: black;
     color: white;
   }
   .newsletter-list-card {
     /* width: 100%; */
     height: 650px;
-    /* background-color: #15d315; */
+    /* background-color: cyan; */
   }
   .newsletter-list-card .container {
     width: 900px;
     height: 550px;
-    /* background-color: red; */
+    /* background-color: cyan; */
   }
   .newsletter-list-card .container .row {
     display: flex;
@@ -322,7 +320,7 @@
   .newsletter-background {
     width: 100%;
     height: 490px;
-    /* background-color: red; */
+    /* background-color: cyan; */
     margin-top: 90px;
     position: relative;
   }
